test/parallel/forall/reduce-intents/ri-minmax-2-error.good
ri-minmax-2-error.chpl:10: error: reducing a value of type int(64); here expecting values of type 2*int(64) for an accumulation state of type 2*2*int(64)
